# typechecker

./: CHANGELOG.md  LICENSE  README.md  typechecker.cabal
app/: Ast.hs  Eval.hs  Parser.hs  TypeChecker.hs
exe/: Main.hs
test/: Main.hs
