cabal-version:      3.0
name:               typechecker
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dean Golan
maintainer:         deangogolan@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ast, Eval, TypeChecker, Parser
    hs-source-dirs:   app
    build-depends:    base ^>=4.21.0.0
                    , mtl ^>=2.3.1
                    , parsec
    default-language: Haskell2010
    default-extensions: LambdaCase, BlockArguments

executable typechecker
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   exe
    build-depends:    base ^>=4.21.0.0, typechecker
    default-language: Haskell2010
    default-extensions: LambdaCase, BlockArguments

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:    base
                    , HUnit
                    , typechecker
    default-language: Haskell2010
